--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "bulma": "^1.0.3",
     "dotenv": "^16.4.7",
     "firebase": "^11.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
